<resources>
    <string name="app_name">CarMoney</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="number">%1$d</string>
    <string name="nothing">nothing</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="available_count">Available: %1$d</string>
    <string name="max" translatable="false">MAX</string>
    <string name="min" translatable="false">MIN</string>
    <string name="zero" translatable="false">0</string>
    <string name="not_enough_warning">You don\'t have enough!</string>
    <string name="negative_warning">Negative is forbidden!</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="logo_description">Application logo</string>
    <string name="go">GO</string>
    <string name="filled_number" translatable="false">number</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="enter_pin">Enter your PIN</string>
</resources>