<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_3"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/three"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/two"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/one"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/four"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/five"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/six"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/seven"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/eight"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/nine"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/zero"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="123dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_circle_gray"
            android:contentDescription="@string/number" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_circle_gray"
            android:contentDescription="@string/number"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_circle_gray"
            android:contentDescription="@string/number" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/number"
            app:srcCompat="@drawable/ic_circle_gray"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/enter_pin"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>