<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:fontFamily="@font/advent_pro_bold"
                android:hint="@string/zero"
                android:inputType="numberSigned"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <Button
                android:id="@+id/max_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="150dp"
                android:text="@string/max"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/min_button"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

            <Button
                android:id="@+id/min_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="150dp"
                android:text="@string/min"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toStartOf="@+id/max_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/withdraw"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/advent_pro_medium"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/available_count"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>